--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "element-ui": "^2.15.14",
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^9.0.0",
+    "harmony-components-vue2": "^1.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.5.1",
     "terser": "^5.14.2",
