--- a/src/components-vue2/package.json
+++ b/src/components-vue2/package.json
@@ -1,8 +1,8 @@
 {
   "name": "harmony-components-vue2",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "",
-  "main": "./lib/index.d.ts",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c --bundleConfigAsCjs"
