fix: 修改组件库编译命令，build前先清理之前的产物

--- a/src/components-vue2/package.json
+++ b/src/components-vue2/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup -c --bundleConfigAsCjs"
+    "build": "npm run cls && rollup -c --bundleConfigAsCjs",
+    "cls":"rimraf ../plugins && rimraf ./lib"
   },
   "author": "",
   "license": "ISC",
